# honya

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
src/: cleanse.rs  config.rs  document_import.rs  error.rs  main.rs  model.rs  tests_e2e.rs  theme.rs  update.rs
src/agents/: audit.rs  chunk.rs  coherence.rs  continuity.rs  mod.rs  pipeline.rs  prepass.rs  prompts.rs  refine.rs  reviewer.rs  synopsis.rs  tokenize.rs  tools.rs  translator.rs
src/app/: lexicon.rs  mod.rs  overlay.rs  project.rs  qa.rs  reader.rs  refine.rs  shelf.rs  translate.rs
src/codex/: auth.rs  mod.rs  models.rs  usage_log.rs
src/epub/: extract.rs  import.rs  media.rs  mod.rs  opf.rs  paths.rs  segment.rs  toc.rs
src/export/: blocks.rs  book.rs  docx.rs  epub.rs  html.rs  markdown.rs  mod.rs
src/gui/: fonts.rs  mod.rs  overlays.rs  screens.rs  settings.rs  theme_map.rs  widgets.rs
src/llm/: client.rs  codex.rs  google.rs  mock.rs  mod.rs  structured.rs  tool_loop.rs
src/remote/: auth.rs  mod.rs  protocol.rs  relay.rs
src/ui/: chrome.rs  diff.rs  input.rs  layout.rs  markdown.rs  mod.rs  mouse.rs  text.rs  widgets.rs
src/workspace/: characters.rs  consistency.rs  data_block.rs  glossary.rs  kana.rs  mod.rs  refine_session.rs  sample.rs  scaffold.rs  scan.rs  session.rs  style.rs  translation.rs  volume.rs
web/: README.md  package.json  vite.config.ts  wrangler.toml
web/public/: _headers  _redirects  changelog.html  index.html  install.ps1  install.sh
web/public/partials/: screen-lexicon.html  screen-project.html  screen-reader.html  screen-shelf.html  screen-translate.html
web/src/components/: AppDemo.tsx  Brand.tsx  Footer.tsx  Header.tsx  InstallCard.tsx  PipelineDiagram.tsx  Reveal.tsx  ScreenTabs.tsx  Terminal.tsx  icons.tsx
web/src/components/dashboard/: DashShell.tsx
web/src/data/: changelog.ts  site.ts
web/src/hooks/: useScrolled.ts
web/src/lib/: relay.ts
web/src/routes/: __root.tsx  app.$deviceId.tsx  app.index.tsx  app.tsx  changelog.tsx  index.tsx
web/src/styles/: app.css
